--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <h1>
   Welcome to the Museum of Amazing Gradients!
 </h1>
-<h3><a>Exhibit A: Cold Gradients</a></h3>
+<h3><a href="cold.html">Exhibit A: Cold Gradients</a></h3>
