--- a/index.html
+++ b/index.html
@@ -5,4 +5,10 @@
     <title>GRADIENT MUSEUM - HOME</title>
     <link href="style.css" rel="stylesheet">
   </head>
+  <body>
+    <h1>
+  Welcome to the Museum of Amazing Gradients!
+</h1>
+<h3><a href="cold.html">Exhibit A: Cold Gradients</a></h3>
+  </body>
 </html>
