--- a/cold.html
+++ b/cold.html
@@ -3,6 +3,9 @@
 <html>
   <head>
     <title>GRADIENT MUSEUM - COLD GRADIENTS</title>
-    <link rel="stylesheet" href="style.css">
+    <link href="style.css" rel="stylesheet">
   </head>
+  <body>
+    <iframe style="height:300px;width:300px;background-image:linear-gradient(white,dodgerblue,black);" title="gradient"></iframe>
+  </body>
 </html>
