--- a/cold.html
+++ b/cold.html
@@ -6,6 +6,7 @@
     <link href="style.css" rel="stylesheet">
   </head>
   <body>
-    <iframe style="height:300px;width:300px;background-image:linear-gradient(white,dodgerblue,black);" title="gradient"></iframe>
+    <iframe style="height:300px;width:300px;background-image:linear-gradient(white,dodgerblue,black);border:5px solid dimgrey;" title="gradient"></iframe>
+    <iframe style="height:300px;width:300px;background-image:linear-gradient(white,deepskyblue,lightsteelblue);border:5px solid dimgrey;" title="gradient"></iframe>
   </body>
 </html>
