--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
   Welcome to the Museum of Amazing Gradients!
 </h1>
 <h3><a href="cold.html">Exhibit A: Cold Gradients</a></h3>
+    <h3><a href="warm.html">Exhibit B: Warm Gradients</a></h3>
   </body>
 </html>
