--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link href="style.css" rel="stylesheet">
   </head>
   <body>
+        <div class="topnav">
+      <a href="index.html">HOME</a>
+    </div>
     <h1>
   Welcome to the Museum of Amazing Gradients!
 </h1>
