--- a/cold.html
+++ b/cold.html
@@ -6,6 +6,9 @@
     <link href="style.css" rel="stylesheet">
   </head>
   <body>
+        <div class="topnav">
+      <a href="index.html">HOME</a>
+    </div>
     <h1>COLD GRADIENTS</h1>
     <iframe style="height:300px;width:300px;background-image:linear-gradient(white,dodgerblue,black);border:5px solid dimgrey;" title="gradient"></iframe>
     <iframe style="height:300px;width:300px;background-image:linear-gradient(white,deepskyblue,lightsteelblue);border:5px solid dimgrey;" title="gradient"></iframe>
